# si7021_raspberry_pico

./: .gitignore  CMakeLists.txt  README.md  prepare.sh
src/: Adafruit_Pico_I2CDevice.h  Adafruit_Pico_Si7021.cpp  Adafruit_Pico_Si7021.h  main.cpp
src/Adafruit_Pico/: Adafruit_Pico_I2CDevice.cpp  Adafruit_Pico_Si7021.h  CMakeLists.txt
